# kawow

./: .gitignore  .readthedocs.yaml  .tmp_mqg_metrics.py  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  changelog.md  conf.py  features.md  index.rst  installation.md  make.bat  quickstart.md  requirements.txt  rtd-environment.yml
kawow/: __init__.py  atom_types.py  features.py  metrics.py  model.py  pfasgroups_features.py  smarts_model.py
kawow-0.1.2/: PKG-INFO  README.md  pyproject.toml
kawow-0.1.2/kawow/: __init__.py
kawow-0.1.2/kawow/data/: logkoa_model.json  logkow_ols_model.json
kawow-0.1.2/tests/: test_performance.py  test_smarts_model_accuracy.py
kawow-0.1.4/: PKG-INFO  pyproject.toml
kawow-0.1.4/kawow/: metrics.py
kawow-0.1.4/kawow/data/: logkow_naef_crippen_mqg_model.pkl  naef2024_logkoa_parameters.csv  naef2024_logkow_parameters.csv  naef2024_logkow_parameters_mixed.csv
kawow-1.0.0/: PKG-INFO  pyproject.toml
kawow-1.0.0/kawow/: __init__.py  io.py
kawow-1.0.0/kawow/data/: logkoa_crippen_mqg_model.pkl  logkoa_model.json  logkoa_naef_crippen_mqg_model.pkl  logkoa_naef_mqg_model.pkl  logkoa_pfasgroups_model.pkl  logkoa_pfasgroups_naef_crippen_xgb_model.pkl  logkoa_pfasgroups_naef_model.pkl  logkow_crippen_mqg_model.pkl  logkow_model.json  logkow_naef_mqg_model.pkl  logkow_pfasgroups_naef_crippen_model.pkl  logkow_pfasgroups_naef_model.pkl
kawow-1.0.0/tests/: test_models.py  test_naef_model_accuracy.py
kawow/data/: logkoa_model.json  logkoa_ols_model.json  logkoa_pfasgroups_crippen_model.pkl  logkoa_pfasgroups_mixed_model.pkl  logkoa_pfasgroups_model.pkl  logkoa_pfasgroups_naef_crippen_model.pkl  logkoa_pfasgroups_naef_crippen_nn_meta.pkl  logkoa_pfasgroups_naef_crippen_nn_model.keras  logkoa_pfasgroups_naef_mixed_xgb_model.pkl  logkow_model.json  logkow_pfasgroups_crippen_model.pkl  logkow_pfasgroups_mixed_model.pkl  logkow_pfasgroups_model.pkl  logkow_pfasgroups_naef_crippen_nn_meta.pkl  logkow_pfasgroups_naef_crippen_nn_model.keras  logkow_pfasgroups_naef_crippen_xgb_model.pkl  logkow_pfasgroups_naef_mixed_xgb_model.pkl  naef2024_logkoa_parameters_mixed.csv
partcoeff/: __init__.py  io.py  model.py
scripts/: _finalize_ensemble.py  _quick_pfasgroups_cv.py  _yrand_naef.py  _yrand_naef_fast.py  augment_benchmark_csv.py  augment_benchmark_csv_ml.py  augment_benchmark_csv_pfasgroups.py  compare_smarts_vs_reference.py  evaluate.py  evaluate_by_ionization.py  fit_ensemble_models.py  fit_mixed_naef_crippen.py  fit_model.py  fit_mqg_model.py  fit_pfasgroups_advanced_models.py  fit_pfasgroups_model.py  generalise_smarts.py  shared_fold_benchmark.py
tests/: test_kawow.py  test_models.py  test_performance.py
