[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kawow"
version = "0.1.1"
description = "Models for partitioning coefficients (logKow, logKoa and logKaw) from molecular structure, including model based on [Naef & Acree 2024](https://doi.org/10.3390/liquids4010011)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Luc Miaz" }]

[project.urls]
Repository = "https://github.com/LucMiaz/kawow"
keywords = ["cheminformatics", "logKow", "logKoa", "logKaw", "partition coefficient", "QSPR"]
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "rdkit>=2022.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "matplotlib", "pandas"]
lint = ["pylint>=3.0"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.24",
    "numpydoc>=1.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pylint.main]
ignore-paths = ["scripts", "tests", "docs"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring  (module docstrings already present)
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access (used intentionally in model internals)
]
min-similarity-lines = 8

[tool.pylint.format]
max-line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["kawow*"]

[tool.setuptools.package-data]
kawow = ["data/*.json", "data/*.pkl"]
